# ros2-projects

./: .gitignore
cpp_packages/bebop_cpp/: CMakeLists.txt  package.xml
cpp_packages/bebop_cpp/src/: bebop.cpp
cpp_packages/cpp_pkg/: package.xml
cpp_packages/cpp_pkg/src/: class_client_add_two_ints.cpp  cpp_node.cpp  robot_station.cpp  server_add_two_ints.cpp  spawner.cpp  subs_hardware_status.cpp
cpp_packages/flying_cpp/src/: circle.cpp
cpp_packages/number_cpp/: CMakeLists.txt
cpp_packages/number_cpp/src/: number_counter.cpp  number_publisher.cpp
cpp_packages/toggle_led_cpp/: CMakeLists.txt  package.xml
cpp_packages/toggle_led_cpp/src/: server_led_panel.cpp
cpp_pkg/: CMakeLists.txt  package.xml
cpp_pkg/src/: MyNode.hpp  client_add_two_ints.cpp  resistance_client.cpp  resistance_server.cpp  robot_hardware_status.cpp  robot_station.cpp  smartphone.cpp
flying_cpp/: CMakeLists.txt  package.xml
flying_cpp/src/: circle.cpp
interfaces/led_interface/: package.xml
interfaces/led_interface/msg/: LedTrigger.msg
interfaces/robot_interface/: CMakeLists.txt
interfaces/robot_interface/msg/: HardwareStatus.msg
interfaces/robot_interface/srv/: ResistanceSystem.srv
launch_packages/robot_bringup/launch/: number_app.launch.py  station_communication.launch.py
led_interface/: CMakeLists.txt
led_interface/srv/: LedState.srv
maquina_1/: setup.cfg
maquina_1/maquina_1/: publisher.py  subscriber.py
move_turtle/: setup.py
move_turtle/move_turtle/: eat_turtle.py  turtle_controller.py  turtle_spawner.py
move_turtle_bringup/: CMakeLists.txt  package.xml
move_turtle_bringup/launch/: final_project.launch.py
number_cpp/: package.xml
number_cpp/src/: number_publisher.cpp
project_turtle_interface/: CMakeLists.txt  package.xml
project_turtle_interface/msg/: Turtle.msg  TurtleArray.msg
python_packages/maquina_1/: package.xml  setup.py
python_packages/maquina_1/maquina_1/: publisher.py
python_packages/move_turtle/: package.xml
python_packages/move_turtle/move_turtle/: circle_turtle.py  turtle_spawner.py
python_packages/python_pkg/: package.xml
python_packages/python_pkg/python_pkg/: client_add_two_ints.py  python_test.py  robot_my_custom_msg.py  smartphone.py  subs_robot_custom.py
python_packages/toggle_led_python/: setup.cfg
python_packages/toggle_led_python/toggle_led_python/: battery_state.py  server_led_panel.py
python_pkg/: setup.py
python_pkg/python_pkg/: add_two_ints.py  class_client_add_two_ints.py  resistance_client.py  resistance_server.py  robot_station.py
robot_bringup/: CMakeLists.txt  package.xml
robot_interface/: package.xml
toggle_led_cpp/src/: battery_state.cpp  server_led_panel.cpp
toggle_led_python/: package.xml  setup.py
toggle_led_python/toggle_led_python/: server_led_panel.py
